
v3.x.y 2024-09-??
     * FactImpl::registerFactory function will now always raise an error
       in case of name clashes with an existing registed factory.
     * fixme: PluginBoilerplate header moved, have cmake generate
       redirection header for now?
     * TODO: Header locations changed, except for ncapi.h, ncrystal.h and
       NCrystal.hh. New headers are in subdirs indication their location in
       internal NCrystal coding units ("core", "utils", ...)
     * FIXME: Warn that anyone doing manual builds of NCrystal should read
       INSTALL again, as it has been completely rewritten to reflect the new infrastructure.
     * TODO: Support C++20 compilation
     * TODO: Rename _mmc.py to mmc.py! And add docstrings.
     * TODO: Rename PCBragg to PowderBragg!
     * Redesign the SmallVector class to be never implicitly copyable and
       instead introduce SmallVector_IC which is. This is needed for MS
       VisualStudio support. Also make resize methods unavailable for
       non-noexcept copy types.
     * Redesign the Optional class to support VisualStudio compilation.
     * Explictly add a few methods in NCTypes.hh which should otherwise be
       implicitly available through the base class. This is needed for MS
       VisualStudio support.
     * Replace std::vector with SmallVector in HKLList to work around
       VisualStudio issues.
     * Various minor fixes of code to appease VisualStudio.
     * Disable MMC verbose output messages also in Debug builds.
     * Reimplement ScatterRequest and Absorption request without using CRTP,
       which was confusing to VisualStudio.
     * Prefer numpy.trapezoid over the deprecated numpy.trapz, to support Numpy
       version 2.
     * Return tuple of int rather than numpy.int32 objects for hkl_labels
       provided by Info.hklObjects(), to support Numpy 2.
     * Fix bug where Stirling's formula was used too early when expanding VDOS