@@ -1,5 +1,8 @@
 
 v3.x.y 2024-09-??
+     * Removed several long-obsolete CMake options. Also removed any options
+       related to python code, since those are now installed without cmake.
+     * Removed SOVERSION from produced libraries (due to github issue #186).
      * FactImpl::registerFactory function will now always raise an error
        in case of name clashes with an existing registed factory.
      * fixme: PluginBoilerplate header moved, have cmake generate
